--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,17 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <title>Pybo</title>
 </head>
 <body>
-{% include 'navbar.html' %}
+    {% include 'navbar.html' %}
 
     {% block content %}
     {% endblock %}
 
-<script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
