--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -4,14 +4,14 @@
 
 <div class="container my-3">
     <table class="table">
-        <thread>
+        <thead>
             <tr class="text-center table-dark">
                 <th>번호</th>
                 <th style="width:50%">제목</th>
                 <th>글쓴이</th>
                 <th>작성일시</th>
             </tr>
-        </thread>
+        </thead>
         <tbody>
             {% if question_list %}
             {% for question in question_list %}
@@ -21,7 +21,9 @@
                         {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter0|add:1 }}
                     </td>
                     <td class="text-start">
-                        <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
+                        {# 질문 클릭 시 숫자 입력 화면으로 이동 #}
+                        <a href="{% url 'pybo:num_input' question.id %}">{{ question.subject }}</a>
+
                         {% if question.answer_set.count > 0 %}
                         <span class="text-danger small mx-2">{{ question.answer_set.count }}</span>
                         {% endif %}
