오답 시 메시지 출력 및 3초 후 강제 퇴장 기능 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,15 @@
     <title>Pybo</title>
 </head>
 <body>
-{% include 'navbar.html' %}
+    {% include 'navbar.html' %}
 
     {% block content %}
     {% endblock %}
 
-<script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+
+    {# Random-Number #}
+    {% block script %}
+    {% endblock %}
 </body>
 </html>
